Rename modules to Validate and Crawl
Try to make it clearer what these modules actually do.

Also move combineAnnotations into the Validate module, and checkPorts
to the ExtraChecks module, because that’s what is actually happening.

--- a/Elm.cabal
+++ b/Elm.cabal
@@ -62,11 +62,11 @@ Library
                        Transform.Canonicalize.Type,
                        Transform.Canonicalize.Variable,
                        Transform.Check,
-                       Transform.Expression,
+                       Transform.Crawl,
                        Transform.Declaration,
-                       Transform.Definition,
                        Transform.SortDefinitions,
                        Transform.Substitute,
+                       Transform.Validate,
                        Metadata.Prelude,
                        Parse.Binop,
                        Parse.Declaration,
@@ -152,11 +152,11 @@ Executable elm
                        Transform.Canonicalize.Type,
                        Transform.Canonicalize.Variable,
                        Transform.Check,
-                       Transform.Expression,
+                       Transform.Crawl,
                        Transform.Declaration,
-                       Transform.Definition,
                        Transform.SortDefinitions,
                        Transform.Substitute,
+                       Transform.Validate,
                        Metadata.Prelude,
                        Parse.Binop,
                        Parse.Declaration,
